syntax = "proto3";
package protomsg;
import "msg_common.proto";
import "msg_common_task.proto";
import "msg_common_activity.proto";

//---------------------------------客户端协议--------------------------------- //

//////////////////////////////////////////////////////////////////////////
///  玩家部分 开始
//////////////////////////////////////////////////////////////////////////

// 玩家所有活动任务通知
message MsgGS2CLPlayerAllActivityNotice 
{
  repeated PlayerActivityInfo infos  = 1; //玩家活动任务信息
  repeated PlayerActivityRewarded rewarded = 2; //已领阶段奖励

  repeated PlayerActivityDropInfo drop_infos  = 3; // 掉落活动信息
  repeated PlayerActivityExchangeInfo exchange_infos = 4; // 兑换活动
  repeated PlayerActivityTurntableInfo turntable_infos = 5;  // 转盘活动
  repeated PlayerActivityBeadInfo bead_infos = 6;	// 点灯活动
  repeated PlayerActivityCleanDayInfo clean_day_infos = 8; //清洁日信息
  repeated PlayerActivityRetainedInfo retained_info = 9 ; // 留存活动
  repeated PlayerLoginActivityInfo  login_info = 10 ; // 全服玩家七日登录
}

// 玩家已领阶段奖励通知
message MsgGS2CLPlayerActivityRewardedNotice 
{
  PlayerActivityRewarded rewarded = 1; //已领阶段奖励
}

// 玩家单个活动通知
message MsgGS2CLPlayerActivityNotice 
{
  PlayerActivityInfo info  = 1; //玩家活动任务信息
}

// 玩家单个掉落活动通知
message MsgGS2CLPlayerActivityDropNotice 
{
  PlayerActivityDropInfo drop_info  = 1;
}

// 玩家单个兑换活动通知
message MsgGS2CLPlayerActivityExchangeNotice 
{
  PlayerActivityExchangeInfo info  = 1;
}

// 玩家单个转盘活动通知
message MsgGS2CLPlayerActivityTurntableNotice 
{
  PlayerActivityTurntableInfo info  = 1;
}

// 玩家单个点灯活动通知
message MsgGS2CLPlayerActivityBeadNotice 
{
  PlayerActivityBeadInfo info  = 1;
}

// 玩家单个任务通知
message MsgGS2CLPlayerActivityTaskUpdateNotice
{
  protomsg.TaskData main_task	= 1;
  uint32	activity_id		= 2; // 主活动id
  uint32	sub_id		= 3;     // 子活动id（为0时代表没有）
}

// 活动积分通知
message MsgGS2CLPlayerActivityScoreNotice 
{
  int32 activity_id  = 1;
  int32 sub_id  = 2;
  uint64 score = 3;
}

// 玩家清洁日活动通知
message MsgGS2CLPlayerActivityCleanDayNotice 
{
  PlayerActivityCleanDayInfo info  = 1;
}

// 请求领取活动任务奖励
message MsgCL2GSActivityTaskAwardRequest
{
  uint32	activity_id		= 1; // 主活动id
  uint32	sub_id		= 2;     // 子活动id（为0时代表没有）
	uint32	task_id			= 3;
}

message MsgCL2GSActivityTaskAwardReply
{
  uint32	task_id			= 1;
  repeated Resource awards	= 2;	// 奖品信息
  uint32	activity_id		= 3; // 主活动id
  uint32	sub_id		= 4;     // 子活动id（为0时代表没有）
  int32	error_code		= 99;		// 结果和错误码
}

// 请求领取活动进度奖励
message MsgCL2GSActivityIndexAwardRequest
{
  uint32	activity_id		= 1; // 主活动id
	uint32	index			= 3;     // 0开始递增
}

message MsgCL2GSActivityIndexAwardReply
{
  uint32	index			= 1;
  repeated Resource awards	= 2;	// 奖品信息
    uint32	activity_id		= 3; // 主活动id
    bool vip_reward = 4;  // vip奖励
	bool normal_reward = 5;   // 普通奖励
  int32	error_code		= 99;		// 结果和错误码
}

// 请求兑换
message MsgCL2GSActivityExchangeRequest
{
  uint32	activity_id		= 1; // 主活动id
  
  repeated ExchangeRequestData request = 2;
}

message MsgCL2GSActivityExchangeReply
{
  repeated Resource awards	= 2;	// 奖品信息
  uint32	activity_id		= 3; // 主活动id
  repeated ExchangeRequestData request = 4;
  int32	error_code		= 99;		// 结果和错误码
}

// 转盘抽奖请求
message MsgCL2GSActivityTurntableRequest
{
  uint32 activity_id = 1; 	// 主活动id
  int32 type = 2;			// 抽奖类型
}

// 转盘抽奖回应
message MsgCL2GSActivityTurntableReply
{
  uint32 activity_id = 1; 			// 主活动id
  int32 type = 2;					// 抽奖类型
  repeated Resource awards	= 3;	// 奖品信息
  int32	error_code = 99;			// 结果和错误码
}

// 领取转盘阶段奖励请求
message MsgCL2GSActivityTurntableStageRewardRequest
{
  uint32 activity_id = 1; 			// 主活动id
  uint32 count = 2;					// 阶段奖励对应的抽奖次数
}

// 领取转盘阶段奖励回应
message MsgGS2CLActivityTurntableStageRewardReply
{
  uint32 activity_id = 1; 			// 主活动id
  uint32 count = 2;					// 阶段奖励对应的抽奖次数
  repeated Resource awards	= 3;	// 奖品信息
  int32	error_code = 99;
}

// 领取点灯任务奖励请求
message MsgCL2GSActivityBeadTaskRewardRequest
{
  uint32 activity_id = 1; 	// 主活动id
  uint32 task_id = 2;		// 任务id
}

// 领取点灯任务奖励回应
message MsgCL2GSActivityBeadTaskRewardReply
{
  uint32 activity_id = 1; 			// 主活动id
  uint32 task_id = 2;				// 任务id
  repeated Resource awards	= 3;	// 奖品信息
  int32	error_code = 99;			// 结果和错误码
}

// 领取点灯奖励请求
message MsgCL2GSActivityBeadRewardRequest
{
  uint32 activity_id = 1; 	// 主活动id
  int32 index = 2;			// 连线索引
}

// 领取点灯奖励回应
message MsgCL2GSActivityBeadRewardReply
{
  uint32 activity_id = 1; 			// 主活动id
  int32 index = 2;					// 连线索引
  repeated Resource awards	= 3;	// 奖品信息
  int32	error_code = 99;			// 结果和错误码
}

// 领取点灯最终大奖请求
message MsgCL2GSActivityBeadFinalRewardRequest
{
  uint32 activity_id = 1; 	// 主活动id
}

// 领取点灯最终大奖回应
message MsgCL2GSActivityBeadFinalRewardReply
{
  uint32 activity_id = 1; 			// 主活动id
  repeated Resource awards	= 2;	// 奖品信息
  int32	error_code = 99;			// 结果和错误码
}

message MsgCL2GSQuestionBankRequest
{
    uint32 activity_id   = 1;
}
message MsgGS2CLQuestionBankReply
{
    MsgGS2CLQuestionBankNotice  questions_bank = 1;
}

// 知识广场(线上同步，0点同步)
message  MsgGS2CLQuestionBankNotice
{

    AnswerQuestionComplteState complete_state   = 1;    // 是否完成     //1 答题完成， 2代表放弃，3答题中
    repeated QuestionBankInfo questions         = 2;
    uint32 cur_questions_id                    = 3;    // 当前回答到id
    uint32 correct_cnt                          = 4;    // 答题正确
    uint32 help_cnt                             = 5;    // 帮助次数
    bool is_day_reset                          = 6;    // 0点刷新就是true，上线请求就是false；
    uint32 activity_id                         = 7;    // 活动id
    repeated QuestionBankHelpInfo    help_info = 8;     // 谁帮助
    int32 error_code                           = 99;  
}

// 知识广场(cl->gs  请求答题)
message MsgCL2GSAnswerQuestionsRequest
{
    uint32 answers_id   = 1;
    uint32 activity_id  = 2;
}

// 知识广场(gs->cl 回复答题)
message MsgGS2CLAnswerQuestionsReply
{
    uint32 questions_id = 1;    						// 题目id
    bool is_correct     = 2;    						// 是否正确 true正确，false 为不正确
    uint32 next_questions_id = 3;    					// 下一题题目id
    AnswerQuestionComplteState complete_state   = 4;    // 是否完成     //1 答题完成， 2代表放弃，3答题中
    uint32 activity_id   = 5;
    int32 error_code   = 99;
}

// 知识广场(cl->gs 请求放弃答题)
message MsgCL2GSGiveupAnswerQuestionsRequest
{
    uint32 activity_id  = 1;
}

// 知识广场(gs->cl 放弃答题回复)
message MsgGS2CLGiveupAnswerQuestionsReply
{
   
    uint32 activity_id   = 1;
    int32 error_code   = 99;
}

//知识广场(cl->gs 分享成功发送)
message MsgCL2GSHelpAnswerQuestionRequest
{
    uint32 activity_id  = 1;
    uint32 questions_id = 2;    // 题目id
}

//知识广场(gs->cl 回复分享成功发送)
message MsgGS2CLHelpAnswerQuestionReply
{
    uint32 activity_id   = 1;
    int32 error_code   = 99;
}

//谁帮助答题请求
message MsgCL2GSWhoHelpAnswerQuestionRequest
{
    uint32 activity_id   = 1; 
    uint32 questions_id = 2;    // 题目i
    uint64 player_id = 3;       //帮助的那个答题的人
}


message MsgGS2CLWhoHelpAnswerQuestionReply
{
    uint32 activity_id   = 1;
    uint32 questions_id = 2;    // 题目i
    uint64 player_id = 3;       //帮助的那个答题的人
    int32 error_code   = 99;
}

//清洁日领取奖励
message MsgCL2GSCleanDayGetRewardRequest
{
    uint32 activity_id   = 1; 
    uint32 reward_id = 2;
}


message MsgGS2CLCleanDayGetRewardReply
{
    uint32 activity_id   = 1;
    repeated uint32 reward_ids = 2;
    int32 error_code   = 99;
}

// 获取活动期数
message MsgCL2GSActivityPeriodRequest
{
  repeated uint32  activity_ids = 1;    // 活动id
}

message MsgGS2CLActivityPeriodReply
{
  repeated ActivityPeriodData datas = 1;

  int32   error_code    = 99; 
}


// 留存活动（这个消息，活动开启，抽奖完毕之后进行进行通知，而奖励的通知MsgGS2CLPlayerActivityRewardedNotice这个）
message MsgGS2CLActivityRetainedNotice
{
    PlayerActivityRetainedInfo info = 1;
}

// 抽奖（请求）
message MsgCL2GSActivityRetainedLotteryRequest
{
    uint32 activity_id   = 1;
}

//发送奖励返回
message MsgGS2CLActivityRetainedLotteryReply
{
    uint32 activity_id = 1;
    uint32 lottery_id = 2;        //中奖的id                
    int32 error_code = 99;
}
//领取奖励
message  MsgCL2GSActivityRetainedReceiveAwardRequest
{
    uint32 activity_id = 1;  
    int32 index = 2;  //客户端
}
//
message MsgGS2CLActivityRetainedReceiveAwardReply
{
    uint32 activity_id = 1; 
    uint32 item_id = 2;
    int32 index = 3;
    int32 error_code   = 99;
}


// 玩家七日登录活动
message MsgGS2CLLoginActivityNotice
{
  PlayerLoginActivityInfo notice = 1;   
}

//领取奖励
message MsgCL2GSLLoginActivityReceiveAwardRequest
{
    uint32 activity_id = 1;  
    int32 index = 2;  //客户端
}
//
message MsgGS2CLLoginActivityReceiveAwardReply
{
    uint32 activity_id = 1; 
    int32 index = 2;
    repeated protomsg.Resource reward_resource = 3;
    int32 error_code   = 99;
}


//////////////////////////////////////////////////////////////////////////
///  玩家部分 结束
//////////////////////////////////////////////////////////////////////////

//////////////////////////////////////活动信息//////////////////////////////////////

// 所有活动通知
message MsgGS2CLAllActivityNotice 
{
  ActivityInfos infos  = 1;
}

// 单个活动状态通知
message MsgGS2CLActivityStatusNotice 
{
  int32 activity_id  = 1;
  int32 sub_id  = 2;
  uint64 time_begin = 3;  //开始时间
  uint64 time_end = 4;    //结束时间
  ActivityStatus status  = 5;
  uint64 period = 6; // 期数
}

// 移除活动状态通知
message MsgGS2CLActivityRemoveNotice 
{
  int32 activity_id  = 1;
  int32 sub_id  = 2; //sub_id为0时，移除主活动
}

// 公会活动通知
message MsgGS2CLGuildActivityNotice 
{
  repeated GuildActivityCleanDayInfo clean_day_infos = 1;
}
