syntax = "proto3";
package protomsg;
import "msg_common.proto";
//import "msg_common_map.proto";

//////////////////////////////////////////////////////////////////////////
///  playerbase module 开始
//////////////////////////////////////////////////////////////////////////

enum ClientLocalDataType
{
  ClientLocalDataType_None = 0;  //最大值 
  ClientLocalDataType_CastleShowRecorder = 1;	// 是否播过主堡扩展特效
  ClientLocalDataType_Max = 2;  //最大值 
}

message MsgGS2CLPlayerBaseNotice
{
	uint64 player_id		= 1;
	string name				= 2;
	uint32 level			= 3;
	uint32 exp				= 4;
	
	uint64 oil				= 8;
	uint64 emoney			= 9;
	uint32 language		= 10;
	repeated string client_local_datas = 11;
	uint32 area_id		= 12;		// 区域ID
	repeated uint64 currencies = 13; // 其他货币
	uint64 food				= 14;//食物
	uint64 wood				= 15;//木材
	uint64 steel			= 16;//钢材
	repeated uint32 displayphotos = 117; //拥有的头像
	string head = 18; //当前头像|头像框
	uint64 power = 19;	// 战斗力
	repeated uint32 display_photo_frame = 120; //拥有的头像框

	uint64 collection_count = 21;	// 采集数量
	uint64 kill_count = 22;	// 击杀数量

	vector2d castle_pos = 23;

	uint64 server_start_time = 24; // 开服时间
	uint32 camp_id = 25;		// 势力阵营ID
	uint32 original_camp_id = 26; // 初始势力阵营ID

	uint32 kingdom_title = 27; // 王国头衔
	int64	 register_time = 28;			// 玩家注册时间
	int64  enter_kingdom_time = 29;	// 进入王国时间
	bool evaluation = 30;	// 游戏评价
	int64 first_join_guild_time = 31;	// 第一次加入公会时间，0标识从未加入公会

	uint32 create_account_day = 32; // 创建账号时的开服天数

	uint64 safe_oil = 33;
    uint64 safe_food = 34;
    uint64 safe_wood = 35;
    uint64 safe_steel = 36;

}

message MsgCL2GSRenameRequest
{
	string name				= 1;
	bool use_money		= 2;	// 是否使用钻币
}

message MsgGS2CLRenameReply
{
	string name				= 1;
	int32	error_code		= 99;
}

// 心跳包
message MsgCL2GSKeepLiveRequest
{
}

message MsgGS2CLKeepLiveReply
{
}

// 服务器时间同步通知
message MsgGS2CLServerTimeNotice
{
	int64 server_time	= 1;		// 单位：毫秒
}

// 每天第一次登陆通知
message MsgGS2CLDayResetNotice
{
	uint32 login_days	= 1;		// 累积登陆天数
}

message PlayerAttribute
{
	uint32 type			= 1;				// 玩家属性类型(PlayerAttributeType)
	uint32 sub_type = 2;				// 子类型
	uint64 value		= 3;				// 玩家属性值
}

// 玩家属性变化通知
message MsgGS2CLPlayerAttribute
{
	repeated PlayerAttribute attributes = 1;
}

// 行动力信息
message MsgGS2CLPlayerAPData
{
	uint32 ap = 1;
	int64 last_add_time = 2;
}


// 设置语言请求
message MsgCL2GSSetLanguageTypeRequest
{
	uint32	language_type = 1;
}

// 设置语言响应
message MsgGS2CLSetLanguageTypeReply
{
	int32	error_code		= 99;
}

message MsgCL2GSUpdateClientLocalDataRequest
{
	ClientLocalDataType type = 1;
	string data = 2;
}

// 设置头像请求
message MsgCL2GSSetDisplayPhotoRequest
{
	uint32	displayphoto = 1;
}

// 设置头像响应
message MsgGS2CLSetDisplayPhotoReply
{
	string head = 1;//当前头像|头像框
	int32	error_code		= 99;
}

// 设置头像框请求
message MsgCL2GSSetDisplayPhotoFrameRequest
{
	uint32	display_photo_frame = 1;
}

// 设置头像框响应
message MsgGS2CLSetDisplayPhotoFrameReply
{
	string head = 1;//当前头像|头像框
	int32	error_code		= 99;
}

// 击杀详情请求
message MsgCL2GSKillRequest
{
  uint64	player_id			= 1;
}

// 击杀详情响应
message MsgGS2CLKillReply
{
	KillArmyCountInfo kill_army_count = 1;//击杀详情
	uint64	player_id			= 2;
	int32	error_code		= 99;
}

// 查看其他玩家领主信息
message MsgCL2GSQueryPlayerLordInfoRequest
{
	uint64	player_id			= 1;
}

message MsgGS2CLQueryPlayerLordInfoReply
{
	PlayerLordInfo info		= 1;
	int32	error_code				= 99;		// 结果和错误码
}

// 战斗统计请求
message MsgCL2GSBattleStatisticsRequest
{
  uint64	player_id			= 1;
}

message MsgGS2CLBattleStatisticsReply
{
	BattleStatistics battle_statistics = 1;//战斗统计
	uint64	player_id			= 2;
	int32	error_code		= 99;
}

//新增头像框通知
message MsgGS2CLDisplayPhotoFrameNotice
{
  uint32	display_photo_frame = 1;
}
//新增头像通知
message MsgGS2CLDisplayPhotoNotice
{
  uint32	displayphoto = 1;
}

// Emoney兑换资源
message MsgCL2GSGemToResource
{
	// 购买资源信息
	message BuyResource
	{
		CurrencyType type = 1;// 货币类型
		uint64 num = 2;				// 资源数量
	}
	
	repeated BuyResource resources = 1;	// 资源信息
}

// 服务器兑换资源回应
message MsgGS2CLGemToResourceReply
{
	int32	error_code		= 99;
}

// 更改阵营
message MsgCL2GSChangeCampRequest
{
	uint32 camp_id	= 1;
}

message MsgGS2CLChangeCampReply
{
	uint32 camp_id	= 1;
	int32	error_code		= 99;
}

message PlayerPropertyInfo
{
	PlayerPropertyNoticeType type			= 1;				// PlayerPropertyNoticeType
	uint32 sub_type = 2;				// 子类型
	int64 value		= 3;				// 值
}

// 玩家信息通知
message MsgGS2CLPlayerPropertyNotice
{
	PlayerPropertyInfo info = 1;
}

// 游戏评级请求
message MsgCL2GSGameEvaluationRequest
{
	bool evaluation 			= 1;		// 是否评价
}

// 游戏评级回复
message MsgGS2CLGameEvaluationReply
{
	repeated Resource awards	= 1;		// 奖品信息
	bool evaluation 			= 2;		// 是否评价
	int32  error_code			= 99;
}

//////////////////////////////////////////////////////////////////////////
///  playerbase module 结束
//////////////////////////////////////////////////////////////////////////