syntax = "proto3";
package protomsg;
import "msg_common.proto";

//---------------------------------客户端协议--------------------------------- //
// 登录成功后广播
message MsgGS2CLGetDeployInfoNotice
{
  repeated protomsg.DeployInfo infos = 1;
}

// 请求数据
message MsgGS2CLGetDeployInfoRequest
{
}

message MsgGS2CLGetDeployInfoReply
{
  repeated protomsg.DeployInfo infos = 1;
}

// 设置队伍
message MsgGS2CLSetDeployInfoRequest
{
  repeated protomsg.DeployInfo infos = 1;
}

message MsgGS2CLSetDeployInfoReply
{
  repeated protomsg.DeployInfo infos = 1;
  int32 error_code = 99;                // 结果和错误码
}

// 自动补兵发送
message MsgGS2CLDeployTroopUpdateNotice
{
  repeated protomsg.DeployUpdateTroop troop_infos = 1;
  uint32 add_count = 2;
  uint32 left_count = 3;
}

// 回城发送, 回城可能也会补发自动补兵,但不发送MsgGS2CLDeployTroopUpdateNotice 消息
message MsgGS2CLDeployGoHomeNotice
{
  uint32 deploy_id = 1;
  uint32 troops = 2;
}